[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanx"
version = "1.0.0"
description = "Marine AIS + VHF receiver and tracker for HackRF"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eric Benner" }]
keywords = ["ais", "vhf", "hackrf", "sdr", "marine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Ham Radio",
]
dependencies = [
    "numpy>=1.24",
    "pyais>=2.8",
    "rich>=13.0",
    "faster-whisper>=1.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "build>=1.0",
    "pytest>=8.0",
    "twine>=5.0",
]

[project.scripts]
oceanx = "oceanx.app.cli:main"

[project.urls]
Homepage = "https://github.com/ericbenner/oceanx"
Repository = "https://github.com/ericbenner/oceanx"

[tool.setuptools.packages.find]
where = ["."]
include = ["oceanx*"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
